src/main/kotlin/com/example/demka/shared/errors/common/PermissionError.kt
package ru.umom.hackaton.shared.errors.common

class PermissionError(override val message: String) : RuntimeException()